--- a/themes/loudpastel.yaml
+++ b/themes/loudpastel.yaml
@@ -1,6 +1,6 @@
 scheme: "Loudpastel"
 author: "rhinocerose"
-base00: "121917"
+base00: "0A0F0E"
 base01: "192220"
 base02: "273431"
 base03: "3B4D49"
