--- a/themes/loudpastel.yaml
+++ b/themes/loudpastel.yaml
@@ -11,7 +11,7 @@ base07: "BCECE2"
 base08: "F63589"
 base09: "FC619B"
 base0A: "EF9FB7"
-base0B: "658C42"
+base0B: "7CC33C"
 base0C: "FC1487"
 base0D: "0BAE9A"
 base0E: "FA83AA"
